src/test/ui/impl-trait/static-return-lifetime-infered.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/static-return-lifetime-infered.rs:17:16
   |
LL |         self.x.iter().map(|a| a.0)
   |                ^^^^

warning: not reporting region error due to nll
  --> $DIR/static-return-lifetime-infered.rs:21:16
   |
LL |         self.x.iter().map(|a| a.0)
   |                ^^^^

error: unsatisfied lifetime constraints
  --> $DIR/static-return-lifetime-infered.rs:17:9
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                         - let's call the lifetime of this reference `'1`
LL |         self.x.iter().map(|a| a.0)
   |         ^^^^^^^^^^^^^ requires that `'1` must outlive `'static`

error: unsatisfied lifetime constraints
  --> $DIR/static-return-lifetime-infered.rs:21:9
   |
LL |         self.x.iter().map(|a| a.0)
   |         ^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 2 previous errors

